--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.78.0",
+    "@tailwindcss/postcss": "^4.1.16",
     "@tanstack/react-query": "^5.90.5",
     "@types/jsonwebtoken": "^9.0.10",
     "@upstash/redis": "^1.35.6",
