--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,6 +65,7 @@
     "react-resizable-panels": "^3.0.6",
     "recharts": "^3.3.0",
     "sonner": "^2.0.7",
+    "supabase": "^2.54.11",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
