--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,9 @@
     "@supabase/supabase-js": "^2.78.0",
     "@tailwindcss/postcss": "^4.1.16",
     "@tanstack/react-query": "^5.90.5",
+    "@reown/appkit": "^1.8.13",
+    "@reown/appkit-adapter-wagmi": "^1.8.13",
+    "@reown/appkit-wallet-button": "^1.8.13",
     "@types/jsonwebtoken": "^9.0.10",
     "@upstash/redis": "^1.35.6",
     "@wagmi/core": "^2.22.1",
